# gtm-engine

./: .env.example  .gitignore  CHANGELOG.local.md  CLAUDE.md  Dockerfile.server  HANDOVER.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements-server.txt  setup_composio.py
.claude/: launch.json  settings.json
.claude/rules/: enrichment.md  security.md
.github/workflows/: deployment-k8s-prod.yml  deployment-k8s-staging.yml
cli/: __init__.py  config.py  main.py  output.py
cli/commands/: __init__.py  add_key.py  connect.py  dashboard_cmd.py  enrich.py  init_cmd.py  setup_claude.py  status.py
dashboard/: app.py
dashboard/templates/: admin_dashboard.html  tenant_dashboard.html
docs/: DEPLOYMENT.md  architecture.md  modules.md
docs/deployment_tasks/: 00_INDEX.md  01_auth_state_to_redis.md  02_rate_limit_auth_endpoints.md  03_cap_batch_size.md  04_cors_allowed_origins.md  05_update_default_server_url.md  06_update_dockerfile.md  07_schema_migrations_tracking.md  08_create_helm_chart.md  09_provision_infrastructure.md  10_first_deploy_and_verify.md  11_environment_management.md  CHECKLIST.md
migrations/: 000_schema_migrations.sql  001_initial.sql  002_domain_index.sql  003_run_steps.sql  005_datasets.sql  006_scheduled_workflows.sql  007_dashboard_datasets.sql  008_hosted_apps.sql  009_scripts.sql  010_learning_logs.sql  011_learning_prompt.sql  012_ledger_workflow.sql  013_user_attribution.sql
schema/: supabase_schema.sql
scripts/: watchlist-digest.py
server/: app.py  config.py  database.py
server/admin/: router.py
server/api/: auth.py  credits.py  deps.py  execute.py  keys.py  tables.py
server/apps/: __init__.py  models.py  router.py  service.py
server/auth/: __init__.py  dependencies.py  flexible.py  models.py  router.py  schemas.py  service.py
server/billing/: __init__.py  models.py  router.py  schemas.py  service.py  stripe_handler.py
server/connections/: models.py
server/console/: router.py
server/core/: __init__.py  config.py  database.py  exceptions.py  middleware.py  security.py  vendor_catalog.py
server/dashboards/: __init__.py  models.py  router.py  schemas.py  service.py
server/data/: __init__.py  dataset_router.py  models.py  router.py  schemas.py  service.py
server/execution/: __init__.py  cache.py  learning_models.py  learning_router.py  normalizer.py  parallel.py  persistence.py  rate_limiter.py  retry.py  router.py  run_logger.py  run_models.py  runs_router.py  schedule_router.py  schemas.py  script_models.py  script_router.py  search_patterns.py  service.py
server/models/: base.py  (+7 more)
tests/: test_admin_tenant_flow.py  test_cli.py  test_composio_connection.py  test_connections.py  test_forensic_audit.py  test_gtm_research_workflow.py  test_multi_tenant.py  test_setup_claude.py  test_vault_security.py
vault/: admin.py  connections.py  key_manager.py  mcp_server.py  proxy.py  tenant.py  tenant_console.py  tenant_proxy.py  vault.py
(+99 files in other folders)
